--- a/xnb-generator/xnb-generator.csproj
+++ b/xnb-generator/xnb-generator.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>xnbgenerator</RootNamespace>
     <AssemblyName>xnb-generator</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <StartupObject>Driver</StartupObject>
+    <StartupObject>xnbgenerator.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +40,7 @@
     <Compile Include="CodeWriter.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="XcbSchema.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="XcbSchema.xsd" />
