--- a/xnb-generator/xnb-generator.csproj
+++ b/xnb-generator/xnb-generator.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Generators\TypesGenerator.cs" />
     <Compile Include="Generators\ClassGenerator.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Generators\TypeMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="XcbSchema.xsd" />
